Navbar fixes, disabled scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+html::-webkit-scrollbar {
+    display: none;
+}
+
 .h-593 {
     height: 593px;
 }
